--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-particles": "^1.0.9"
   }
 }
